update service